sort.dutchflag.DutchFlagAlgo.scala.error
Compilation error:
DutchFlagAlgo:6: error: method danslOrdre has return statement; needs result type
      return true;
      ^DutchFlagAlgo:10: error: method danslOrdre has return statement; needs result type
          return true;
          ^DutchFlagAlgo:13: error: method danslOrdre has return statement; needs result type
          return false;
          ^DutchFlagAlgo:15: error: method danslOrdre has return statement; needs result type
          return true;
          ^DutchFlagAlgo:18: error: method danslOrdre has return statement; needs result type
        return false;
        ^DutchFlagAlgo:25: error: not found: value danslOdre
    if (!danslOdre(i, i+1)){
         ^